--- a/app/elements/code-editor/consoles/javaut-console.html
+++ b/app/elements/code-editor/consoles/javaut-console.html
@@ -27,6 +27,7 @@
 				}
 			},
 			setOutput: function(runOutput) {
+				runOutput.Results = runOutput.Results[0];
 				this.runOutput = runOutput;
 				this.$.generalConsole.showConsole();
 			},
