--- a/app/elements/challenge/challenge-list.html
+++ b/app/elements/challenge/challenge-list.html
@@ -2,6 +2,12 @@
 <link rel="import" href="challenge-card.html">
 
 <dom-module id="challenge-list">
+	<style>
+		.challenge-list {
+			padding: 10px;
+		}
+	</style>
+
 	<template>
 		<iron-ajax
 			id="getChallengesAjax"
@@ -12,7 +18,7 @@
 		<template is="dom-if" if="{{isEmpty}}">
 			<h1> You curently don't have any challenges. You can create a challenge from the tasks page</h1>
 		</template>
-		<div class="horizontal layout wrap">
+		<div class="horizontal layout wrap challenge-list ">
 			<template is="dom-repeat" items="{{challenges}}" as="challenge">
 				<challenge-card challenge="{{challenge}}"></challenge-card>
 			</template>
