--- a/app/elements/candidates/invite-candidates.html
+++ b/app/elements/candidates/invite-candidates.html
@@ -9,9 +9,11 @@
 			margin: 16px;
 			float: right;
 		}
+
 		#addCandidate {
 			cursor: pointer;
 		}
+
 		#dialog {
 			position: fixed;
 			top: 10%;
@@ -20,15 +22,17 @@
 	</style>
 	<template>
 		<iron-ajax
-		  id="inviteCandidate"
-		  handle-as="json"
-		  on-response="onPostResponse"
-		  on-error="onError">
+			id="inviteCandidate"
+			handle-as="json"
+			on-response="onPostResponse"
+			on-error="onError">
 		</iron-ajax>
 
 		<paper-dialog id="dialog" modal style="background: white;">
 			<h2>Invite candidates</h2>
+
 			<p>The address format must be: Name (first and last name or a combination) &lt;email address&gt;</p>
+
 			<form is="iron-form" id="form">
 				<div id="candidates"></div>
 				<div id="addCandidate" on-click="_addCandidate">
@@ -51,25 +55,21 @@
 					type: Array,
 					notify: true
 				},
-				challenge: {
-					type: Object,
-					notify: true
-				},
 				candidates: {
 					type: Array,
 					notify: true,
 					value: []
 				}
 			},
-			toggle: function(){
+			toggle: function () {
 				this._clearDialog();
 				this._addCandidate();
 				this.$.dialog.toggle();
 			},
-			inviteCandidates: function(){
-				for (var i = 0; i < this.candidates.length; i++){
+			inviteCandidates: function () {
+				for (var i = 0; i < this.candidates.length; i++) {
 					var candidate = this.candidates[i];
-					if (candidate.Removed !== undefined && candidate.Address !== '' && candidate.Challenge !== undefined){
+					if (!candidate.Removed && candidate.Address !== '' && candidate.Challenge !== undefined) {
 						util.post(this.$.inviteCandidate, '/invitations', {
 							'Address': candidate.Address,
 							'Challenge': candidate.Challenge
@@ -77,21 +77,20 @@
 					}
 				}
 			},
-			_addCandidate: function(){
-				if (this.challenge){
-					this.push('candidates', {'Challenge': this.challenge.Key});
-				}else{
+			_addCandidate: function () {
+				if (this.challenges.length === 1) {
+					this.push('candidates', {'Challenge': this.challenges[0].Key});
+				} else {
 					this.push('candidates', {});
 				}
 				var newInput = document.createElement('invite-candidate-input');
 				newInput.challenges = this.challenges;
-				newInput.challenge = this.challenge;
 				newInput.candidate = this.candidates[this.candidates.length - 1];
 				this.$.candidates.appendChild(newInput);
 			},
-			_clearDialog: function(){
+			_clearDialog: function () {
 				var el;
-				while ((el = document.querySelector('invite-candidate-input')) !== null){
+				while ((el = document.querySelector('invite-candidate-input')) !== null) {
 					el.remove();
 				}
 				this.candidates = [];
