--- a/app/elements/challenge/challenge-card.html
+++ b/app/elements/challenge/challenge-card.html
@@ -5,15 +5,22 @@
 <dom-module id="challenge-card">
 	<style>
 		:host {
-			width: 400px;
-			height: 300px;
-			margin: 5px;
+			width: 350px;
+			height: 250px;
+			margin: 0 10px 10px 0;
 
 		}
 
 		paper-material {
-			width: calc(98.66% - 32px);
-			height: calc(98.66% - 32px);
+			width: 100%;
+			height: 100%;
+			padding: 0;
+		}
+
+		#content {
+			width: calc(100% - 32px);
+			height: calc(100% - 32px);
+			padding: 16px;
 			overflow: hidden;
 		}
 
@@ -27,7 +34,7 @@
 		}
 
 		paper-fab {
-		 	--paper-fab-background: #e5e5e5;
+			--paper-fab-background: #e5e5e5;
 			position: absolute;
 			bottom: 20px;
 			right: 20px;
@@ -41,15 +48,22 @@
 		}
 	</style>
 	<template>
-		<paper-material id="challenge" elevation="2" class="card">
-			<h2>{{challenge.Name}}</h2>
-			<a href="{{goTo}}"><paper-fab mini icon="chevron-right" on-click="onClick"></paper-fab></a>
-			<div class="duration">
-				<iron-icon icon="alarm"></iron-icon>
-				<span>{{duration}}</span>
+		<paper-material
+			id="challenge"
+			elevation="{{elevation}}"
+			class="card"
+			on-mouseover="_onHovered"
+			on-mouseout="_onUnhovered"
+			>
+			<div id="content" on-click="_viewChallengeDetail">
+				<h2>{{challenge.Name}}</h2>
+
+				<div class="duration">
+					<iron-icon icon="alarm"></iron-icon>
+					<span>{{duration}}</span>
+				</div>
+				<div>{{challenge.Description}}</div>
 			</div>
-			<div>{{challenge.Description}}</div>
-			<div>{{challenge.Instructions}}</div>
 		</paper-material>
 	</template>
 	<script>
@@ -63,16 +77,30 @@
 				duration: {
 					type: String,
 					computed: 'computeDuration(challenge)'
+				},
+				elevation: {
+					type: Number,
+					notify: true,
+					value: 1
 				}
 			},
-			ready: function(){
+			ready: function () {
 				this.goTo = '/challenges/' + this.challenge.Key;
 			},
 			computeDuration: function (challenge) {
 				return util.computeDuration(challenge.Duration);
 			},
-			onClick: function(){
+			onClick: function () {
 				app.showProgress();
+			},
+			_onHovered: function () {
+				this.elevation = 5;
+			},
+			_onUnhovered: function () {
+				this.elevation = 1;
+			},
+			_viewChallengeDetail: function () {
+				page.redirect('/challenges/' + this.challenge.Key);
 			}
 		});
 	</script>
