--- a/app/elements/task/task-detail.html
+++ b/app/elements/task/task-detail.html
@@ -32,7 +32,7 @@
 						<dt>Duration</dt>
 						<dd>{{duration}}</dd>
 						<dt>Description</dt>
-						<dd>{{task.Description}}</dd>
+						<dd>{{task.Assignment.Description}}</dd>
 					</dl>
 				</paper-material>
 
@@ -69,7 +69,7 @@
 				this.$.skillPolygon.buildChart();
 			},
 			_computeDuration: function (task) {
-				return util.computeDuration(task.Duration);
+				return util.computeDuration(task.Assignment.Duration);
 			},
 			_taskSet: function() {
 				this.$.skillPolygon.buildChart();
