Improve styling of Code Editor view

--- a/app/elements/submission/tasks/task-display.html
+++ b/app/elements/submission/tasks/task-display.html
@@ -2,15 +2,15 @@
 	<style>
 		:host{
 			display: block;
-			margin: 16px;
+			padding: 16px;
 		}
 	</style>
 	<template>
 		<div>
-			<h1>{{task.Assignment.Name}}</h1>
-			<h3>Description</h3>
+			<h2>{{task.Assignment.Name}}</h2>
+			<h4>Description</h4>
 			<p>{{task.Assignment.Description}}</p>
-			<h3>Instructions</h3>
+			<h4>Instructions</h4>
 			<p>{{task.Assignment.Instructions}}</p>
 		</div>
 	</template>
