--- a/app/elements/submission/tasks/general-code-task.html
+++ b/app/elements/submission/tasks/general-code-task.html
@@ -23,9 +23,8 @@
 			background: white;
 		}
 		#codeEditorWrapper{
-			height: calc(100% - 72px);
-			width: calc(100% - 32px);
-			margin: 16px;
+			height: 100%;
+			width: 100%;
 		}
 		#leftCard{
 			margin: 16px 8px 16px 16px;
@@ -82,7 +81,6 @@
 			</div>
 			<div class="flex">
 				<paper-material id="topRightCard" elevation="1">
-					<h2>Code editor</h2>
 					<div id="codeEditorWrapper">
 						<code-editor id="codeEditor"></code-editor>
 					</div>
