--- a/app/elements/submission/tasks/output-match-task.html
+++ b/app/elements/submission/tasks/output-match-task.html
@@ -30,6 +30,20 @@
 			observers: [
 				'afterPropertiesSet(task)'
 			],
+			listeners: {
+				'ws-onerror': 'onWsError',
+				'ws-onmessage': 'onWsMessage',
+				'ws-onopen': 'onWsOpen'
+			},
+			onWsOpen: function(){
+				console.log('WS OPENED');
+			},
+			onWsError: function(err){
+				console.log(err);
+			},
+			onWsMessage: function(data){
+				console.log(data);
+			},
 			afterPropertiesSet: function(){
 				this.control = {};
 				var component = this;
@@ -37,14 +51,14 @@
 					component.$.console.loading();
 				};
 			},
-			onResponse: function(r){
-				localStorage.setItem('lastSubmission', r.detail.response.Key);
-				if(r.detail.response.DiffLines !== null){
-					this.finishButtonClass = 'error';
-				}else{
-					this.finishButtonClass = 'success';
-				}
-				this.$.console.setOutput(r.detail.response);
+			onResponse: function(){
+				// localStorage.setItem('lastSubmission', r.detail.response.Key);
+				// if(r.detail.response.DiffLines !== null){
+				// 	this.finishButtonClass = 'error';
+				// }else{
+				// 	this.finishButtonClass = 'success';
+				// }
+				// this.$.console.setOutput(r.detail.response);
 			},
 			onError: function(error){
 				util.error(error);
