--- a/app/elements/code-editor/consoles/javaut-console.html
+++ b/app/elements/code-editor/consoles/javaut-console.html
@@ -15,7 +15,7 @@
 		<general-console id="generalConsole">
 			<javaut-output run-output="{{runOutput}}">
 			</javaut-output>
-		</general-general>
+		</general-console>
 	</template>
 	<script>
 		Polymer({
