--- a/app/elements/code-editor/consoles/output-test-console.html
+++ b/app/elements/code-editor/consoles/output-test-console.html
@@ -25,7 +25,7 @@
 			<template is="dom-repeat" items="{{items}}">
 				<p><span>{{index}}</span>. <span class$="{{getClass(index)}}">{{item}}</span></p>
 			</template>
-		</general-general>
+		</general-console>
 	</template>
 	<script>
 	 Polymer({
