Improve dynamic elements rendering

--- a/app/elements/candidates/invite-candidate-input.html
+++ b/app/elements/candidates/invite-candidate-input.html
@@ -80,7 +80,7 @@
 				this.candidate.Challenge = this.$$('#challenges').options[this.$$('#challenges').selectedIndex].value;
 			},
 			_removeItem: function () {
-				this.candidate.Removed = true;
+				this.fire('removeCandidate', this.candidate);
 				this.remove();
 			}
 		});
